Feature engineering and pipeline

--- a/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
+++ b/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "[39654634 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,6 +145,28 @@
     "from src.data import load_raw_data\n",
     "rides = load_raw_data(year =2022)\n",
     "rides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pickup_datetime       0\n",
+       "pickup_location_id    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rides.isnull().sum()"
    ]
   },
   {
@@ -160,7 +182,7 @@
       "  rides[\"pickup_hour\"] = rides['pickup_datetime'].dt.floor('H')\n",
       "C:\\Users\\LENOVO\\Desktop\\taxi_demand_predictor\\src\\data.py:83: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  full_range = pd.date_range(\n",
-      "100%|██████████| 262/262 [00:05<00:00, 45.33it/s]\n"
+      "100%|██████████| 262/262 [00:05<00:00, 49.89it/s]\n"
      ]
     }
    ],
@@ -177,117 +199,11 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pickup_hour</th>\n",
-       "      <th>rides</th>\n",
-       "      <th>pickup_location_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-01 00:00:00</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-01 01:00:00</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-01 02:00:00</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-01 03:00:00</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-01 04:00:00</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2295115</th>\n",
-       "      <td>2022-12-31 19:00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2295116</th>\n",
-       "      <td>2022-12-31 20:00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2295117</th>\n",
-       "      <td>2022-12-31 21:00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2295118</th>\n",
-       "      <td>2022-12-31 22:00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2295119</th>\n",
-       "      <td>2022-12-31 23:00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2295120 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                pickup_hour  rides  pickup_location_id\n",
-       "0       2022-01-01 00:00:00   11.0                   4\n",
-       "1       2022-01-01 01:00:00   15.0                   4\n",
-       "2       2022-01-01 02:00:00   26.0                   4\n",
-       "3       2022-01-01 03:00:00    8.0                   4\n",
-       "4       2022-01-01 04:00:00    9.0                   4\n",
-       "...                     ...    ...                 ...\n",
-       "2295115 2022-12-31 19:00:00    1.0                 199\n",
-       "2295116 2022-12-31 20:00:00    1.0                 199\n",
-       "2295117 2022-12-31 21:00:00    1.0                 199\n",
-       "2295118 2022-12-31 22:00:00    1.0                 199\n",
-       "2295119 2022-12-31 23:00:00    1.0                 199\n",
-       "\n",
-       "[2295120 rows x 3 columns]"
+       "pickup_hour           0\n",
+       "rides                 0\n",
+       "pickup_location_id    0\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 4,
@@ -296,19 +212,26 @@
     }
    ],
    "source": [
-    "rides"
+    "rides.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 262/262 [00:37<00:00,  6.93it/s]\n"
+      "  0%|          | 0/262 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 262/262 [00:28<00:00,  9.19it/s]"
      ]
     },
     {
@@ -317,6 +240,13 @@
      "text": [
       "features.shape = (88294, 674)\n",
       "target.shape = (88294,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -335,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
