--- a/notebooks/11_backfill_feature_store.ipynb
+++ b/notebooks/11_backfill_feature_store.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,28 +46,28 @@
       " File 2022-10 already exists\n",
       " File 2022-11 already exists\n",
       " File 2022-12 already exists\n",
-      "Downloading file 2023-01\n",
-      "Downloading file 2023-02\n",
-      "Downloading file 2023-03\n",
-      "Downloading file 2023-04\n",
-      "Downloading file 2023-05\n",
-      "Downloading file 2023-06\n",
-      "Downloading file 2023-07\n",
-      "Downloading file 2023-08\n",
-      "Downloading file 2023-09\n",
-      "Downloading file 2023-10\n",
-      "Downloading file 2023-11\n",
-      "Downloading file 2023-12\n",
-      "Downloading file 2024-01\n",
-      "Downloading file 2024-02\n",
-      "Downloading file 2024-03\n",
-      "Downloading file 2024-04\n",
-      "Downloading file 2024-05\n",
-      "Downloading file 2024-06\n",
-      "Downloading file 2024-07\n",
-      "Downloading file 2024-08\n",
-      "Downloading file 2024-09\n",
-      "Downloading file 2024-10\n",
+      " File 2023-01 already exists\n",
+      " File 2023-02 already exists\n",
+      " File 2023-03 already exists\n",
+      " File 2023-04 already exists\n",
+      " File 2023-05 already exists\n",
+      " File 2023-06 already exists\n",
+      " File 2023-07 already exists\n",
+      " File 2023-08 already exists\n",
+      " File 2023-09 already exists\n",
+      " File 2023-10 already exists\n",
+      " File 2023-11 already exists\n",
+      " File 2023-12 already exists\n",
+      " File 2024-01 already exists\n",
+      " File 2024-02 already exists\n",
+      " File 2024-03 already exists\n",
+      " File 2024-04 already exists\n",
+      " File 2024-05 already exists\n",
+      " File 2024-06 already exists\n",
+      " File 2024-07 already exists\n",
+      " File 2024-08 already exists\n",
+      " File 2024-09 already exists\n",
+      " File 2024-10 already exists\n",
       "Downloading file 2024-11\n",
       "Failed to download 2024-11\n",
       "Downloading file 2024-12\n",
@@ -92,119 +92,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LENOVO\\Desktop\\taxi_demand_predictor\\src\\data.py:108: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "  rides[\"pickup_hour\"] = rides['pickup_datetime'].dt.floor('H')\n",
+      "C:\\Users\\LENOVO\\Desktop\\taxi_demand_predictor\\src\\data.py:83: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "  full_range = pd.date_range(\n",
+      "100%|██████████| 263/263 [00:16<00:00, 15.47it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.data import transform_raw_data_into_ts_data\n",
+    "ts_data = transform_raw_data_into_ts_data(rides)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pickup_datetime</th>\n",
-       "      <th>pickup_location_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-01 00:35:40</td>\n",
-       "      <td>142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-01 00:33:43</td>\n",
-       "      <td>236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-01 00:53:21</td>\n",
-       "      <td>166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-01 00:25:21</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-01 00:36:48</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3833766</th>\n",
-       "      <td>2024-10-31 23:49:01</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3833767</th>\n",
-       "      <td>2024-10-31 23:35:15</td>\n",
-       "      <td>137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3833768</th>\n",
-       "      <td>2024-10-31 23:30:43</td>\n",
-       "      <td>188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3833769</th>\n",
-       "      <td>2024-10-31 23:00:00</td>\n",
-       "      <td>230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3833770</th>\n",
-       "      <td>2024-10-31 23:18:00</td>\n",
-       "      <td>246</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>111818774 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            pickup_datetime  pickup_location_id\n",
-       "0       2022-01-01 00:35:40                 142\n",
-       "1       2022-01-01 00:33:43                 236\n",
-       "2       2022-01-01 00:53:21                 166\n",
-       "3       2022-01-01 00:25:21                 114\n",
-       "4       2022-01-01 00:36:48                  68\n",
-       "...                     ...                 ...\n",
-       "3833766 2024-10-31 23:49:01                 107\n",
-       "3833767 2024-10-31 23:35:15                 137\n",
-       "3833768 2024-10-31 23:30:43                 188\n",
-       "3833769 2024-10-31 23:00:00                 230\n",
-       "3833770 2024-10-31 23:18:00                 246\n",
-       "\n",
-       "[111818774 rows x 2 columns]"
+       "(6532920, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rides"
+    "ts_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hopsworks"
    ]
   },
   {
