location hour issue solved

--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date = Timestamp('2025-01-05 03:00:00')\n"
+      "current_date = Timestamp('2025-01-12 06:00:00')\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
     "\n",
     "fetch_date_to = current_date\n",
     "\n",
-    "fetch_date_from = current_date - timedelta(days = 28)"
+    "fetch_date_from = current_date - timedelta(days = 32)"
    ]
   },
   {
@@ -87,7 +87,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 260/260 [00:00<00:00, 385.52it/s]\n"
+      "100%|██████████| 257/257 [00:00<00:00, 309.43it/s]\n"
      ]
     }
    ],
@@ -100,14 +100,28 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_location_counts = (\n",
+    "    ts_data.groupby('pickup_hour')['pickup_location_id']\n",
+    "    .nunique()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={'pickup_location_id': 'unique_location_count'})\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-05 09:26:24,759 INFO: Initializing external client\n",
-      "2025-01-05 09:26:24,759 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-01-05 09:26:30,480 INFO: Python Engine initialized.\n",
+      "2025-01-12 12:08:29,569 INFO: Initializing external client\n",
+      "2025-01-12 12:08:29,569 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-12 12:08:31,778 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n"
      ]
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +156,8 @@
      "output_type": "stream",
      "text": [
       "pickup_hour           datetime64[ns]\n",
-      "rides                        float64\n",
       "pickup_location_id             int64\n",
+      "rides                        float64\n",
       "dtype: object\n"
      ]
     }
@@ -156,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 180960/180960 | Elapsed Time: 00:11 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 205660/205660 | Elapsed Time: 00:13 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -182,7 +196,7 @@
        " None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
