--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date = Timestamp('2025-01-12 06:00:00')\n"
+      "current_date = Timestamp('2025-01-14 09:00:00+0000', tz='UTC')\n"
      ]
     }
    ],
    "source": [
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime, timedelta, timezone\n",
     "\n",
     "import pandas as pd\n",
     "\n",
-    "current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n",
+    "current_date = pd.to_datetime(datetime.now(timezone.utc)).floor('H')\n",
     "print(f'{current_date = }')\n",
     "\n",
     "fetch_date_to = current_date\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 257/257 [00:00<00:00, 309.43it/s]\n"
+      "100%|██████████| 256/256 [00:00<00:00, 274.86it/s]\n"
      ]
     }
    ],
@@ -98,30 +98,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_location_counts = (\n",
-    "    ts_data.groupby('pickup_hour')['pickup_location_id']\n",
-    "    .nunique()\n",
-    "    .reset_index()\n",
-    "    .rename(columns={'pickup_location_id': 'unique_location_count'})\n",
-    ")\n"
+    "location_id_per_pickup_hour = set(list(ts_data.groupby('pickup_hour')['pickup_location_id'].nunique()))\n",
+    "pickup_hour_per_location_id = set(list(ts_data.groupby('pickup_location_id')['pickup_hour'].nunique()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(location_id_per_pickup_hour) == 1 and len(pickup_hour_per_location_id) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-12 12:08:29,569 INFO: Initializing external client\n",
-      "2025-01-12 12:08:29,569 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-01-12 12:08:31,778 INFO: Python Engine initialized.\n",
+      "2025-01-14 15:05:08,613 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-01-14 15:05:08,620 INFO: Initializing external client\n",
+      "2025-01-14 15:05:08,621 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-14 15:05:10,563 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n"
      ]
@@ -148,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pickup_hour           datetime64[ns]\n",
-      "pickup_location_id             int64\n",
-      "rides                        float64\n",
+      "pickup_hour           datetime64[ns, UTC]\n",
+      "pickup_location_id                  int64\n",
+      "rides                             float64\n",
       "dtype: object\n"
      ]
     }
@@ -170,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -184,19 +191,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching job: time_series_hourly_feature_group_1_offline_fg_materialization\n",
+      "Launching job: time_series_hourly_feature_group_v2_1_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1207467/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization/executions\n"
+      "https://c.app.hopsworks.ai:443/p/1207467/jobs/named/time_series_hourly_feature_group_v2_1_offline_fg_materialization/executions\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Job('time_series_hourly_feature_group_1_offline_fg_materialization', 'SPARK'),\n",
+       "(Job('time_series_hourly_feature_group_v2_1_offline_fg_materialization', 'SPARK'),\n",
        " None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
