--- a/notebooks/14_inference_pipeline.ipynb
+++ b/notebooks/14_inference_pipeline.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -19,7 +9,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date = Timestamp('2025-01-10 07:00:00+0000', tz='UTC')\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current_date = Timestamp('2025-01-14 09:00:00+0000', tz='UTC')\n"
      ]
     }
    ],
@@ -33,33 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-10 12:39:31,692 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-01-14 15:07:25,726 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-01-10 12:39:31,701 INFO: Initializing external client\n",
-      "2025-01-10 12:39:31,701 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-01-10 12:39:33,771 INFO: Python Engine initialized.\n",
+      "2025-01-14 15:07:25,753 INFO: Initializing external client\n",
+      "2025-01-14 15:07:25,753 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-14 15:07:27,706 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (11.16s) \n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minference\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_batch_of_features_from_store\n\u001b[1;32m----> 3\u001b[0m features \u001b[38;5;241m=\u001b[39m \u001b[43mload_batch_of_features_from_store\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_date\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Desktop\\taxi_demand_predictor\\src\\inference.py:55\u001b[0m, in \u001b[0;36mload_batch_of_features_from_store\u001b[1;34m(current_date)\u001b[0m\n\u001b[0;32m     51\u001b[0m ts_data \u001b[38;5;241m=\u001b[39m ts_data[ts_data\u001b[38;5;241m.\u001b[39mpickup_hour\u001b[38;5;241m.\u001b[39mbetween(fetch_data_from\n\u001b[0;32m     52\u001b[0m                                               , fetch_data_to)]\n\u001b[0;32m     54\u001b[0m location_ids \u001b[38;5;241m=\u001b[39m ts_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpickup_location_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[1;32m---> 55\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(ts_data) \u001b[38;5;241m==\u001b[39m n_features\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mlen\u001b[39m(location_ids)\n\u001b[0;32m     57\u001b[0m ts_data\u001b[38;5;241m.\u001b[39msort_values(by \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpickup_location_id\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpickup_hour\u001b[39m\u001b[38;5;124m\"\u001b[39m], inplace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mts_data\u001b[38;5;250m \u001b[39m\u001b[38;5;132;01m= }\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (7.69s) \n",
+      "ts_data =                      pickup_hour  pickup_location_id  rides\n",
+      "49120  2024-12-17 09:00:00+00:00                   1    1.0\n",
+      "147689 2024-12-17 10:00:00+00:00                   1    1.0\n",
+      "127337 2024-12-17 11:00:00+00:00                   1    1.0\n",
+      "35706  2024-12-17 12:00:00+00:00                   1    1.0\n",
+      "26403  2024-12-17 13:00:00+00:00                   1    3.0\n",
+      "...                          ...                 ...    ...\n",
+      "92006  2025-01-14 04:00:00+00:00                 263    7.0\n",
+      "76509  2025-01-14 05:00:00+00:00                 263   13.0\n",
+      "125665 2025-01-14 06:00:00+00:00                 263   57.0\n",
+      "158953 2025-01-14 07:00:00+00:00                 263  101.0\n",
+      "148321 2025-01-14 08:00:00+00:00                 263  106.0\n",
+      "\n",
+      "[174720 rows x 3 columns]\n"
      ]
     }
    ],
