--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -138,8 +138,8 @@
     "import hopsworks\n",
     "\n",
     "project = hopsworks.login(\n",
-    "    project = config.HOPSWORK_PROJECT_NAME,\n",
-    "    api_key_value = config.HOPSWORK_API_KEY\n",
+    "    project = config.HOPSWORKS_PROJECT_NAME,\n",
+    "    api_key_value = config.HOPSWORKS_API_KEY\n",
     ")\n",
     "\n",
     "feature_store = project.get_feature_store()\n",
