New feature group

--- a/notebooks/14_inference_pipeline.ipynb
+++ b/notebooks/14_inference_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -21,54 +21,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date = Timestamp('2025-01-14 09:00:00+0000', tz='UTC')\n"
+      "current_date = Timestamp('2025-01-18 16:00:00+0000', tz='UTC')\n"
      ]
     }
    ],
    "source": [
-    "from datetime import datetime\n",
+    "from datetime import datetime, timezone\n",
     "import pandas as pd\n",
     "\n",
-    "current_date = pd.to_datetime(datetime.utcnow(), utc=True).floor('H')\n",
+    "current_date = pd.to_datetime(datetime.now(timezone.utc)).floor('H')\n",
     "print(f'{current_date = }')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-14 15:07:25,726 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-01-18 21:48:31,149 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-01-14 15:07:25,753 INFO: Initializing external client\n",
-      "2025-01-14 15:07:25,753 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-01-14 15:07:27,706 INFO: Python Engine initialized.\n",
+      "2025-01-18 21:48:31,166 INFO: Initializing external client\n",
+      "2025-01-18 21:48:31,166 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-18 21:48:33,237 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (7.69s) \n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (13.91s) \n",
       "ts_data =                      pickup_hour  pickup_location_id  rides\n",
-      "49120  2024-12-17 09:00:00+00:00                   1    1.0\n",
-      "147689 2024-12-17 10:00:00+00:00                   1    1.0\n",
-      "127337 2024-12-17 11:00:00+00:00                   1    1.0\n",
-      "35706  2024-12-17 12:00:00+00:00                   1    1.0\n",
-      "26403  2024-12-17 13:00:00+00:00                   1    3.0\n",
+      "152769 2024-12-21 16:00:00+00:00                   1    2.0\n",
+      "24563  2024-12-21 17:00:00+00:00                   1    3.0\n",
+      "131967 2024-12-21 18:00:00+00:00                   1    7.0\n",
+      "48472  2024-12-21 19:00:00+00:00                   1    1.0\n",
+      "112310 2024-12-21 20:00:00+00:00                   1    1.0\n",
       "...                          ...                 ...    ...\n",
-      "92006  2025-01-14 04:00:00+00:00                 263    7.0\n",
-      "76509  2025-01-14 05:00:00+00:00                 263   13.0\n",
-      "125665 2025-01-14 06:00:00+00:00                 263   57.0\n",
-      "158953 2025-01-14 07:00:00+00:00                 263  101.0\n",
-      "148321 2025-01-14 08:00:00+00:00                 263  106.0\n",
+      "106145 2025-01-18 11:00:00+00:00                 263  162.0\n",
+      "154397 2025-01-18 12:00:00+00:00                 263  187.0\n",
+      "118338 2025-01-18 13:00:00+00:00                 263  169.0\n",
+      "40006  2025-01-18 14:00:00+00:00                 263  149.0\n",
+      "144136 2025-01-18 15:00:00+00:00                 263  149.0\n",
       "\n",
       "[174720 rows x 3 columns]\n"
      ]
@@ -78,6 +78,276 @@
     "from src.inference import load_batch_of_features_from_store\n",
     "\n",
     "features = load_batch_of_features_from_store(current_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-18 21:49:07,627 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-01-18 21:49:07,636 INFO: Initializing external client\n",
+      "2025-01-18 21:49:07,636 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-18 21:49:09,557 INFO: Python Engine initialized.\n",
+      "\n",
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9528745323326657, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9528745323326657\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.96864818553338, subsample=1.0 will be ignored. Current value: bagging_fraction=0.96864818553338\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FutureWarning: The LGBMRegressor or classes from which it inherits use `_get_tags` and `_more_tags`. Please define the `__sklearn_tags__` method, or inherit from `sklearn.base.BaseEstimator` and/or other appropriate mixins such as `sklearn.base.TransformerMixin`, `sklearn.base.ClassifierMixin`, `sklearn.base.RegressorMixin`, and `sklearn.base.OutlierMixin`. From scikit-learn 1.7, not defining `__sklearn_tags__` will raise an error.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pickup_location_id</th>\n",
+       "      <th>predicted_demand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>208</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>181</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>63</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>147</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pickup_location_id  predicted_demand\n",
+       "0                 208               1.0\n",
+       "1                  90              94.0\n",
+       "2                 181               1.0\n",
+       "3                  63               2.0\n",
+       "4                 147               1.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.inference import (\n",
+    "    load_model_from_registry,\n",
+    "    get_model_predictions\n",
+    ")\n",
+    "\n",
+    "model = load_model_from_registry()\n",
+    "predictions = get_model_predictions(model, features)\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pickup_location_id</th>\n",
+       "      <th>predicted_demand</th>\n",
+       "      <th>pickup_hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>208</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-01-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>2025-01-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>181</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-01-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>63</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2025-01-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>147</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-01-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pickup_location_id  predicted_demand               pickup_hour\n",
+       "0                 208               1.0 2025-01-18 16:00:00+00:00\n",
+       "1                  90              94.0 2025-01-18 16:00:00+00:00\n",
+       "2                 181               1.0 2025-01-18 16:00:00+00:00\n",
+       "3                  63               2.0 2025-01-18 16:00:00+00:00\n",
+       "4                 147               1.0 2025-01-18 16:00:00+00:00"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions['pickup_hour'] = current_date\n",
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-18 21:51:22,408 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-01-18 21:51:22,411 INFO: Initializing external client\n",
+      "2025-01-18 21:51:22,414 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-18 21:51:24,371 INFO: Python Engine initialized.\n",
+      "\n",
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.feature_store_api import get_feature_store\n",
+    "import src.config as config\n",
+    "\n",
+    "# connect to the feature group\n",
+    "feature_group = get_feature_store().get_or_create_feature_group(\n",
+    "    name=config.FEATURE_GROUP_MODEL_PREDICTIONS,\n",
+    "    version=1,\n",
+    "    description=\"Predictions generate by our production model\",\n",
+    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
+    "    event_time='pickup_hour',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Group created successfully, explore it at \n",
+      "https://c.app.hopsworks.ai:443/p/1207467/fs/1196121/fg/1395015\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading Dataframe: 100.00% |██████████| Rows 260/260 | Elapsed Time: 00:02 | Remaining Time: 00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: model_predictions_feature_group_1_offline_fg_materialization\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://c.app.hopsworks.ai:443/p/1207467/jobs/named/model_predictions_feature_group_1_offline_fg_materialization/executions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Job('model_predictions_feature_group_1_offline_fg_materialization', 'SPARK'),\n",
+       " None)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_group.insert(predictions, write_options={\"wait_for_job\": False})"
    ]
   },
   {
