--- a/notebooks/13_model_training_pipeline.ipynb
+++ b/notebooks/13_model_training_pipeline.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-18 21:13:23,764 INFO: Initializing external client\n",
-      "2025-01-18 21:13:23,764 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-01-18 21:13:26,234 INFO: Python Engine initialized.\n",
+      "2025-01-25 10:38:12,609 INFO: Initializing external client\n",
+      "2025-01-25 10:38:12,609 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-01-25 10:38:18,275 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1207467\n"
      ]
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (16.68s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (17.54s) \n"
      ]
     },
     {
@@ -114,11 +114,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ts_data = ts_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pickup_hour</th>\n",
+       "      <th>pickup_location_id</th>\n",
+       "      <th>rides</th>\n",
+       "      <th>pickup_ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-12-24 11:00:00+00:00</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1703415600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-10-22 09:00:00+00:00</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1729587600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-02-05 18:00:00+00:00</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1707156000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-10-29 05:00:00+00:00</td>\n",
+       "      <td>167</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1730178000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-06-11 03:00:00+00:00</td>\n",
+       "      <td>245</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1686452400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548435</th>\n",
+       "      <td>2023-03-08 11:00:00+00:00</td>\n",
+       "      <td>151</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>1678273200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548436</th>\n",
+       "      <td>2024-01-14 18:00:00+00:00</td>\n",
+       "      <td>215</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1705255200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548437</th>\n",
+       "      <td>2024-11-26 20:00:00+00:00</td>\n",
+       "      <td>261</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1732651200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548438</th>\n",
+       "      <td>2024-10-13 00:00:00+00:00</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1728777600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4548439</th>\n",
+       "      <td>2023-05-07 22:00:00+00:00</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1683496800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4548440 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       pickup_hour  pickup_location_id  rides      pickup_ts\n",
+       "0        2023-12-24 11:00:00+00:00                 225    1.0  1703415600000\n",
+       "1        2024-10-22 09:00:00+00:00                 133    2.0  1729587600000\n",
+       "2        2024-02-05 18:00:00+00:00                  30    1.0  1707156000000\n",
+       "3        2024-10-29 05:00:00+00:00                 167    1.0  1730178000000\n",
+       "4        2023-06-11 03:00:00+00:00                 245    1.0  1686452400000\n",
+       "...                            ...                 ...    ...            ...\n",
+       "4548435  2023-03-08 11:00:00+00:00                 151   53.0  1678273200000\n",
+       "4548436  2024-01-14 18:00:00+00:00                 215    1.0  1705255200000\n",
+       "4548437  2024-11-26 20:00:00+00:00                 261   18.0  1732651200000\n",
+       "4548438  2024-10-13 00:00:00+00:00                  19    1.0  1728777600000\n",
+       "4548439  2023-05-07 22:00:00+00:00                 108    1.0  1683496800000\n",
+       "\n",
+       "[4548440 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_data"
    ]
   },
   {
